--- a/Tuan2_View_And_Model/Phan_Mem_Quan_Ly_Cham_Diem_Hoi_Thi_Dieu_Lenh/Phan_Mem_Quan_Ly_Cham_Diem_Hoi_Thi_Dieu_Lenh/View/LoginView.xaml
+++ b/Tuan2_View_And_Model/Phan_Mem_Quan_Ly_Cham_Diem_Hoi_Thi_Dieu_Lenh/Phan_Mem_Quan_Ly_Cham_Diem_Hoi_Thi_Dieu_Lenh/View/LoginView.xaml
@@ -17,25 +17,230 @@
         <Border.Background>
             <ImageBrush ImageSource="/Images/back-quandoi.jpg"/>
         </Border.Background>
-        
-    <Border CornerRadius="10"
-            BorderThickness="5"
-            Opacity="0.75">
-        
-        <Border.BorderBrush>
-            <LinearGradientBrush StartPoint="0,0" EndPoint="1,1">
-                <GradientStop Color="#FF0000" Offset="0"/>
-                <GradientStop Color="#FFA500" Offset="0.5"/>
-                <GradientStop Color="#FFD700" Offset="1"/>
-                </LinearGradientBrush>
-        </Border.BorderBrush>
 
-        <Border.Background>
-            <LinearGradientBrush StartPoint="0,1" EndPoint="1,0">
-                <GradientStop Color="#AA0000" Offset="0"/>
-                <GradientStop Color="#FFB400" Offset="1"/>
-            </LinearGradientBrush>
-        </Border.Background>
-    </Border>
+        <Border CornerRadius="10"
+            BorderThickness="1"
+            Opacity="0.75">
+
+            <Border.BorderBrush>
+                <LinearGradientBrush StartPoint="0,0" EndPoint="1,1">
+                    <GradientStop Color="#FF0000" Offset="0"/>
+                    <GradientStop Color="#FFA500" Offset="0.5"/>
+                    <GradientStop Color="#FFD700" Offset="1"/>
+                </LinearGradientBrush>
+            </Border.BorderBrush>
+
+            <Border.Background>
+                <LinearGradientBrush StartPoint="0,1" EndPoint="1,0">
+                    <GradientStop Color="#AA0000" Offset="0"/>
+                    <GradientStop Color="#FFB400" Offset="1"/>
+                </LinearGradientBrush>
+            </Border.Background>
+
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="30"/>
+                    <RowDefinition/>
+                </Grid.RowDefinitions>
+
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition/>
+                        <ColumnDefinition Width="25"/>
+                        <ColumnDefinition Width="25"/>
+                        <ColumnDefinition Width="25"/>
+                        <ColumnDefinition Width="5"/>
+                    </Grid.ColumnDefinitions>
+                    <TextBlock Text="LOG IN" 
+                              Foreground="White" 
+                              FontSize="17"
+                              FontFamily="Montserrat"
+                              Grid.Column="0"
+                              VerticalAlignment="Center"
+                              Margin="10,0,0,0"/>
+
+                    <Button x:Name="btnMinimize"                           
+                            Background="Transparent"
+                            BorderThickness="0"
+                            Content="-"
+                            Foreground="White"
+                            FontSize="20"
+                            FontFamily="Montserrat"
+                            Cursor="Hand"
+                            Grid.Column="1"
+                            Click="btnMinimize_Click">
+                    </Button>
+
+                    <Button x:Name="btnMaxRestore"
+                            Background="Transparent"
+                            BorderThickness="0"
+                            Content="🗖" 
+                            Foreground="White"
+                            FontSize="16"
+                            FontFamily="Montserrat"
+                            Cursor="Hand"
+                            Grid.Column="2"
+                            Click="btnMaxRestore_Click">
+                    </Button>
+
+                    <Button x:Name="btnClose" 
+                            BorderThickness="0"
+                            Content="X"
+                            Foreground="White"
+                            FontSize="16"
+                            FontFamily="Montserrat"
+                            Cursor="Hand"
+                            Grid.Column="3"
+                            Click="btnClose_Click">
+                        <Button.Style>
+                            <Style TargetType="Button">
+                                <Setter Property="Background" Value="Transparent"/>
+                                <Style.Triggers>
+                                    <Trigger Property="IsMouseOver" Value="True">
+                                        <Setter Property="Background" Value="Red"/>
+                                    </Trigger>
+                                </Style.Triggers>
+                            </Style>
+                        </Button.Style>
+
+                        <Button.Template>
+                            <ControlTemplate TargetType="Button">
+                                <Border Background="{TemplateBinding Background}">
+                                    <ContentPresenter VerticalAlignment="Center"
+                                                      HorizontalAlignment="Center"/>
+                                </Border>
+                            </ControlTemplate>
+                        </Button.Template>
+                    </Button>
+                </Grid>
+
+                <StackPanel x:Name="myStackPanel"
+                            Width="250"
+                            Grid.Row="2"
+                            Orientation="Vertical"
+                            Margin="0,130,0,0">
+
+                    <TextBlock Text="QĐND-VN"
+                               Foreground="White"
+                               FontSize="25"
+                               FontWeight="Medium"
+                               FontFamily="Montserrat"
+                               HorizontalAlignment="Center" 
+                               Margin="0,20,0,0"/>
+
+                    <TextBlock Text="Đăng Nhập Để Sử Dụng"
+                               Foreground="White"
+                               FontSize="15"
+                               FontWeight="Medium"
+                               FontFamily="Montserrat"
+                               HorizontalAlignment="Center" 
+                               Margin="0,10,0,0"/>
+
+                    <TextBlock Text="Username"
+                               Foreground="DarkGray"
+                               FontSize="15"
+                               FontWeight="Medium"
+                               FontFamily="Montserrat"
+                               Margin="0,35,0,0"/>
+
+                    <TextBox x:Name="txtUser"
+                             FontSize="13"
+                             FontWeight="Medium"
+                             FontFamily="Montserrat"
+                             Foreground="White"
+                             CaretBrush="LightGray"
+                             BorderBrush="DarkGray"
+                             BorderThickness="0,0,0,1"
+                             Height="28"
+                             VerticalContentAlignment="Center"
+                             Margin="0,5,0,0"
+                             Padding="30,0,0,0">
+                        <TextBox.Background>
+                            <ImageBrush ImageSource="/Images/user-icon.png"
+                                        Stretch="Uniform"
+                                        AlignmentX="Left"/>
+                        </TextBox.Background>
+                    </TextBox>
+
+                    <TextBlock Text="Password"
+                               Foreground="DarkGray"
+                               FontSize="15"
+                               FontWeight="Medium"
+                               FontFamily="Montserrat"
+                               Margin="0,15,0,0"/>
+
+                    <PasswordBox x:Name="txtPass"
+                             FontSize="13"
+                             FontWeight="Medium"
+                             FontFamily="Montserrat"
+                             Foreground="White"
+                             CaretBrush="LightGray"
+                             BorderBrush="DarkGray"
+                             BorderThickness="0,0,0,1"
+                             Height="28"
+                             VerticalContentAlignment="Center"
+                             Margin="0,5,0,0"
+                             Padding="30,0,0,0">
+                        <PasswordBox.Background>
+                            <ImageBrush ImageSource="/Images/key.png"
+                                        Stretch="Uniform"
+                                        AlignmentX="Left"/>
+                        </PasswordBox.Background>
+                    </PasswordBox>
+
+                    <Button x:Name="btnLogin" 
+                            BorderThickness="0"
+                            Content="Đăng Nhập"
+                            Foreground="White"
+                            FontSize="16"
+                            FontFamily="Montserrat"
+                            Cursor="Hand"
+                            Margin="0,50,0,0"
+                            Click="btnLogin_Click">
+                        <Button.Style>
+                            <Style TargetType="Button">
+                                <Setter Property="Background" Value="Goldenrod"/>
+                                <Style.Triggers>
+                                    <Trigger Property="IsMouseOver" Value="True">
+                                        <Setter Property="Background" Value="Gray"/>
+                                    </Trigger>
+                                </Style.Triggers>
+                            </Style>
+                        </Button.Style>
+
+                        <Button.Template>
+                            <ControlTemplate TargetType="Button">
+                                <Border Width="150"
+                                        Height="35"
+                                        CornerRadius="20"
+                                       Background="{TemplateBinding Background}">
+                                    <ContentPresenter VerticalAlignment="Center"
+                                  HorizontalAlignment="Center"/>
+                                </Border>
+                            </ControlTemplate>
+                        </Button.Template>
+                    </Button>
+
+                    <StackPanel Orientation="Horizontal"
+                                HorizontalAlignment="Center"
+                                Margin="0,15,0,0">
+
+                        <TextBlock Text="Quên Mật Khẩu?"
+                                   Foreground="DarkGray"
+                                   FontSize="13"
+                                   FontWeight="Medium"
+                                   FontFamily="Montserrat"/>
+
+                        <TextBlock Text="Đăng Ký"
+                                   Foreground="White"
+                                   FontSize="14"
+                                   FontWeight="Medium"
+                                   FontFamily="Montserrat"
+                                   Margin="8,0,0,0"/>
+                    </StackPanel>
+                    
+                </StackPanel>
+            </Grid>
+        </Border>
     </Border>
 </Window>
